<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PruebaEscribirBD">

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="88dp"
            android:fontFamily="sans-serif-medium"
            android:text="Escribe tu nombre"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/texto_nombre"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="142dp"
            android:layout_marginBottom="27dp"
            android:gravity="center"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:text="Escribe una descripción"
            android:textColor="#040303"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/texto_descripcion"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="34dp"
            android:inputType="text|textMultiLine"
            android:maxLength="2000" />

        <TextView
            android:id="@+id/texto_feedback"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/boton_validar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#1F201F"
            android:backgroundTintMode="add"
            android:text="REGISTRAR" />

        <Button
            android:id="@+id/boton_continuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="49dp"
            android:backgroundTint="#1F201F"
            android:backgroundTintMode="add"
            android:text="CONTINUAR" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="197dp"
            android:layout_height="0dp"
            android:layout_marginBottom="132dp" />

</LinearLayout>