...
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:text=""
        />

    <Button
        android:id="@+id/btnComprobar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:text="Comprobar"/>
...
